# botbowl

./: .gitignore  CNAME  Dockerfile  LICENSE  MANIFEST.in  README.md  build.py  dev_ffai.sh  index.md  play_ffai.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
botbowl/ai/: __init__.py  env.py  env_render.py  layers.py  new_env.py  (+4 more)
docker/: Dockerfile.comptetition_bot
docs/: 2020 ruleset.md  2020-ruleset-delta.md  CNAME  _config.yml  a2c-full.md  a2c-pathfinding.md  a2c-selfplay.md  a2c.md  bot-bowl-i.md  bot-bowl-ii.md  bot-bowl-iii.md  bot-bowl-iv.md  bot-bowl-v.md  bots-ii.md  bots-iii.md  bots.md  cython_development.md  development.md  docker.md  features.md  forward-model.md  gym.md  index.md  installation.md  mcts.md  mcts_tutorial.md  monte-carlo.md  papers.md  search-based.md  server.md  submit.md  tutoriais.md  tutorials.md
examples/: bot-example.py  bot_example.py  bot_test_example.py  competition_example.py  containerized_bot.py  forward_model_example.py  grod_bot.py  grodbot (original).py  grodbot.py  grodbot_example.py  grodbot_translated.py  gym-example.py  gym_example.py  hard_debugging.py  hash_example.py  mcts_example.py  multi_gym_example.py  portfolio_bot.py  random_bot_example.py  run_bot.py  scripted_bot_brawl.py  scripted_bot_example.py  search_example.py  server_example.py  setup.cfg
ffai/: __init__.py
tests/: test_coin_toss.py  test_dice.py  test_dodge.py  test_game.py  test_gym.py  test_injury.py  test_kickoff_table.py  test_loaders.py  test_server.py  test_setup.py  test_teams.py  util.py
(+346 files in other folders)
